Todo - Doe - Fixed overflow for lon todo items, Header is fixed now

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,6 @@
 html, body, app-root, .app-frame {
-  overflow: hidden;
-  margin: 0;
   height: 100%;
-  box-sizing: border-box;
-  color: #e0e0e0;
-  min-width: 310px;
+  min-width: 360px;
 }
 
 .area {
