--- a/src/app/components/todo/todo-header/todo-header.component.scss
+++ b/src/app/components/todo/todo-header/todo-header.component.scss
@@ -1,8 +1,13 @@
+.header-cover {
+  position: fixed;
+  top: 0;
+  background-color: #303030;
+  z-index: 0;
+  width: 100%;
+  height: 7.4em;
+}
+
 .add-button {
   margin-right: 1em;
   outline: none;
-}
-
-.text-field {
-  width: 100%;
 }
