--- a/src/app/components/todo/todo.component.scss
+++ b/src/app/components/todo/todo.component.scss
@@ -1,3 +1,16 @@
 .main {
   margin: 0.5em;
 }
+
+.header {
+  z-index: 20;
+  position: fixed;
+  left: 3.7em;
+  top: 0.5em;
+  width: calc(100% - 4.2em);
+}
+
+.content {
+  //position: relative;
+  //top: 6.9em;
+}
